# Perovskite_Insight_Agent

./: .gitignore  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts  xiey.md
.agents/rules/: doc-rules.md
.claude/: settings.local.json
.claude/hooks/: install.ps1  install.sh  post-commit  pre-push  prepare-commit-msg
.claude/memory/: ARCHITECTURE_REVIEW.md  AUDIT_PLAN.md  AUDIT_REPORT.md  DECISIONS.md  GLOSSARY.md  HERMES_SYSTEM.md  MEMORY.md  PATTERNS.md  PITFALLS.md  README.md  SESSION.md
docs/: Audit_Gap_Analysis.md  Claude_Code_Execution_Plan.md  DEVELOPMENT_WORKFLOW.md  PIA_PRD.md  Refactor_Plan.md  System_Architecture.md  TODO.md  WORKFLOW_QUICK_REF.md  backend_test_plan.md  implementation_plan_cors_fix.md  implementation_plan_embedding_fix.md  task_embedding_fix.md  walkthrough_embedding_fix.md
src/: App.tsx  index.css  main.tsx
src-python/: config.json.example  main.py  requirements.txt
src-python/api/: __init__.py  chat.py  compare.py  config.py  extract.py  literature.py  projects.py  qa.py  search.py
src-python/core/: crawler.py  database.py  exporter.py  extractor.py  model_manager.py  normalizer.py  pdf_engine.py  progress.py  prompts.py  qa_engine.py  rag_engine.py  search.py  security.py  smart_slicer.py  stage1.py  translator.py  upload_manager.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: TEST_PLAN_FIXES.md  test_api.py  test_backend_fixes.py  test_phase2.py
(+37 files in other folders)
